2013-03-31  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix \b[...\b] tag processing.

	* info/nodes.h (TAG) <content_cache>: New member.
	* info/nodes.c (get_nodes_of_info_file)
	(get_nodes_of_tags_table): Initialize TAG->content_cache.
	(info_node_of_file_buffer_tags): Use cached contents if
	available. Call tags_expand upon the first access to that
	node.
	(free_info_tag): Free content_cache.
	* info/tag.c (tag_image): Fix state machine.  Ignore '='s,
	unless in state_kw.
	(tags_expand): Change return value and signature. Allocate
	memory only if at least one tag is actually expanded.
	* info/tag.h (tags_expand): Change prototype.
	* info/filesys.c (filesys_read_info_file): Do not call
	tags_expand on the entire buffer.

2013-03-20  Karl Berry  <karl@gnu.org>

	Minor doc tweaks.
	* NEWS: more technalities about the macro-expansion incompatibility.
	* README-hacking: call change_perl_modules_version.sh for release.
	* doc/texinfo.txi: wording around PDF items.
	* doc/texinfo.tex: typos in comment.

2013-03-20  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.am (SUBDIRS): If HOST_IS_WINDOWS, add 'info' to SUBDIRS
	even if HAVE_TERMLIBS is false.
	* configure.ac <have_termlib>: Don't bother warning on MinGW as
	well.

2013-03-20  Karl Berry  <karl@gnu.org>

	* man/Makefile.am (man_rule_0): set EXEEXT="" since it's
	no longer an executable.  Report from Eli, 20 Mar 2013 20:47:52.
	(mi_perl5lib): set up another variable to shorten source lines.

2013-03-16  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm (_parse_texi): accept the same 
	character in @value as in @set.

2013-03-14  Karl Berry  <karl@gnu.org>

	* maintain/regenerate_cmd_tests.sh,
	* tests/run_parser_all.sh,
	* tests/many_input_files/tex_l2h.sh: use $0 in some diagnostics.

	* NEWS: mention switch from cvs to svn.
	* doc/texinfo.txi (Invoking @t{pod2texi}): svn url instead of cvs
	for Perl manual in Texinfo.
	* contrib/perldoc-all/perldoc-all.texi: likewise, and turn off